fix social form register(overflow:hidden)

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -73,11 +73,9 @@ hiện lên trước, vì vậy cần z-index */
 .modal__body {
     /* width: 300px;
     height: 300px; */
-    background-color: var(--white-color);
     margin: auto;
     position: relative;
     z-index: 1;
-    border-radius: 5px;
 }
 
 /* button style */
