--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -279,7 +279,13 @@ Hiện mờ mờ dần lên : opacity*/
 /* Authen Modal */
 .auth-form {
     width: 500px;
+    border-radius: 5px;
+    overflow: hidden;
+    background-color: var(--white-color);
 }
+
+/* overflow: hidden, khi kích thước của con vượt quá cha
+nó sẽ chọc ra ngoài, nên cần phải ẩn đi(socials là con của form) */
 
 .auth-form__container {
     padding: 0 32px;
@@ -302,13 +308,6 @@ Hiện mờ mờ dần lên : opacity*/
     font-weight: 400;
     color: var(--primary-color);
     cursor: pointer;
-}
-
-.auth-form__switch-btn {
-}
-
-.auth-form__form {
-
 }
 
 .auth-form__input {
@@ -355,10 +354,10 @@ Hiện mờ mờ dần lên : opacity*/
 
 .auth-form__socials {
     background-color: #F5F5F5;
-    padding: 14px 36px;
+    padding: 16px 36px;
     display: flex;
     justify-content: space-between;
-    margin-top: 24px;
+    margin-top: 22px;
 }
 
 .auth-form__socials-icon {
@@ -376,7 +375,7 @@ Hiện mờ mờ dần lên : opacity*/
 }
 
 .auth-form__socials--google {
-    background-color: var(--white-color);
+    background-color:  var(--white-color);
     color: #666;
 }
 
